spring-boot-demo 1. 热部署测试，新增了一个eating()方法测试。 2. spring boot支持一个restart，它的原理是利用两个单独的classloader进行加载类，那些不会变的依赖（jar）用一个来加载，其他会变化的class文件用另一个来加载，并监控classpath路径的变化，一旦classpath变化就重新加载特定的classloader，相对提高了效率。 3. 另外spring boot被jrebel支持热部署，即reload，它并不是基于classloader来实现的，而是直接修改字节码文件并根据框架性质修改该字节码文件相关的其他字节码文件，并没有一个重新加载的概念。效率更高！ 4. spring boot还支持一个Livereload的组件，是动态监控页面的变化而刷新页面的，不用手动刷新。

--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -35,6 +35,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--spring boot的一些开发工具，包括热启动工具等等-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
     </dependencies>
 
     <build>
