--- a/spring-boot-demo/src/main/resources/application.properties
+++ b/spring-boot-demo/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # \u89E6\u53D1\u70ED\u90E8\u7F72\u7684\u5F00\u5173\u6587\u4EF6
 #spring.devtools.reload.trigger-file=.reloadtrigger
+
+# \u4FEE\u6539\u670D\u52A1\u5668\u7AEF\u53E3
+server.port=80
