--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -36,6 +36,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!--mybatis提供的spring boot启动支持-->
+        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+
         <!--启动freemarker支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,6 +56,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
 
 
