--- a/spring-boot-demo/src/main/resources/application.properties
+++ b/spring-boot-demo/src/main/resources/application.properties
@@ -4,3 +4,13 @@
 # \u4FEE\u6539\u670D\u52A1\u5668\u7AEF\u53E3
 server.port=80
 
+# DataSource
+spring.datasource.url=jdbc:mysql://192.168.131.128:3306/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# mybatis
+mybatis.configuration-properties.mapUnderscoreToCamelCase=true
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
