--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -65,6 +65,17 @@
             <version>8.0.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
