--- a/spring-boot-demo/src/main/resources/application.properties
+++ b/spring-boot-demo/src/main/resources/application.properties
@@ -5,9 +5,10 @@
 server.port=80
 
 # DataSource
-spring.datasource.url=jdbc:mysql://192.168.131.128:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://192.168.131.128:3306/test
+spring.datasource.url=jdbc:mysql://207.148.104.217:3306/test
+spring.datasource.username=john 
+spring.datasource.password=john
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # mybatis
